Final revisions for Apr.2013 newsletter

--- a/pnsac/apr13/article_ProgReport.tex
+++ b/pnsac/apr13/article_ProgReport.tex
@@ -140,7 +140,7 @@ re-installed, along with the luggage shelf and floor.
 \section{Planned Restoration Work--2013}
 \label{sec:plannedwork}
 
-This winter we will replace all the items removed from the crew areas
+This summer we will replace all the items removed from the crew areas
 and continue the rebuild of engine \#3.
 
 Sewing of the seat fabric will begin soon and will continue until all
