--- a/pnsac/apr13/article_ContactInfo.tex
+++ b/pnsac/apr13/article_ContactInfo.tex
@@ -38,7 +38,7 @@ Director, Deputy Project Manager\\
 
 \address{Bruce Grant\\
 Director, NStar Chronicle Editor\\
-\email{r\_b\_grant@yahoo.ca}}
+\email{editor@projectnorthstar.ca}}
 
 \columnbreak
   
@@ -57,15 +57,22 @@ Corporate Secretary\\
 
 \address{Paul Labranche\\
 Treasurer\\
-\email{plabranche@andrews.ca}}
+\email{treasurer@projectnorthstar.ca}}
 
 %\end{minipage}
   
-\subsection{Newsletter}
+\subsection{Newsletter\protect\footnote{This newsletter is typeset using
+    \LaTeX.  The style package used for the newsletter (PNSAC.sty) is
+    a modification of GRASSnews.sty belonging to the Geographic
+    Analysis Resources Support System (GRASS). The modification was
+    made possible by kind permission of the Editor-in-Chief of
+    GRASS-News.}}
 
-\address{Editor: Bruce Grant}
 
-\address{Typesetter: Drew Hodge}
+\small\address{Editor: Bruce Grant\\
+\small\email{editor@projectnorthstar.ca}}
+
+%\address{Typesetter: Drew Hodge}
 
 %\end{multicols}
 
@@ -91,12 +98,17 @@ Treasurer\\
 
 %\begin{multicols}{2}
 
+%\address{PNSAC Newsletter postal and Web site addresses:}
 
-\address{PNSAC Newsletter\footnote{This newsletter is typeset using \LaTeX.  The style package used for the newsletter (PNSAC.sty) is a modification of GRASSnews.sty belonging to the Geographic Analysis Resources Support System (GRASS). The modification was made possible by kind permission of the Editor-in-Chief of GRASS-News.} email address:\\
-  \email{info@projectnorthstar.ca} -- Attention: Editor}\\
-\begin{em}Web site:\end{em} {\normalfont\color{blue}\texttt{\url{www.projectnorthstar.ca}}}\\
-%% \begin{em}Facebook page:\end{em} {\normalfont\color{blue}\texttt{\url{www.facebook.com/PNSAC}}}\\
-%% \begin{em}Twitter:\end{em} {\normalfont\texttt{@pnsaccomms}}
+
+\scriptsize\address{PNSAC\\
+P.O.Box 44005\\
+514 Montreal Road\\
+Ottawa, ON\\
+K1K 4P8}\\
+
+\scriptsize\address{Web site: {\normalfont\color{blue}\texttt{\url{www.projectnorthstar.ca}}}}\\
+
 
 \begin{figure}
     \centering
