Changes and images for Jul 2013 newsletter.

--- a/pnsac/jul13/article_Feature1.tex
+++ b/pnsac/jul13/article_Feature1.tex
@@ -9,116 +9,116 @@
 
 \maketitle
 
-I am a bean counter and I always wanted to be an engineer. For 5 plus
-years in the late 1950s I had struggled to overcome the boredom of
-training to be a Chartered Accountant in Leeds in Northern England. We
-worked long hours for free because it was said that our bosses would
-be giving us a valuable training.
+As a new employee, part of my Rolls-Royce induction process was to get
+to know some of the production and other R-R facilities around
+Derby. After a few weeks of working in the Overheads Department, it
+was suggested that it was time for me to go visiting. I was happy to
+do this because any opportunity to leave the main accounting office
+for a time was to be jumped at.
 
-\end{multicols}
+Rolls-Royce had an internal bus service to take employees between
+sites. To catch the bus, an employee went down to the door of the
+building and waited for a bus to turn up -- no booking or written
+schedule.  I remember my first trip on a company bus. It took me about
+half an hour of asking people around how to get to the site I
+wanted. I was beginning to realize that much of the operations of R-R
+were not written and were passed around by word of mouth and the long
+time employees passing on information to the newcomers. Years later,
+when working in Northern Canada in native communities I once again
+came across this way of handing down unwritten information from the
+Elders to the younger people. Before starting my job at R-R I had
+believed that the company would be highly organized and disciplined.
 
-\begin{figure*}[ht!]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=1.0]{richard_lodge.eps}
-   %caption of the figure 
-   \caption*{\small \em Richard Lodge in the 1970s.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:richard}
-\end{figure*}
+I finally managed to find my way to the building I was due to visit.
+It was the Foundry. I was introduced to the men who worked in this
+evil smelling place. Each of the major engine parts was individually
+cast -- there was no automation and a good foundry man could put
+together the sand and other parts needed for the casting, mostly from
+memory. During WW2 the foundry had concentrated entirely on the
+production of military engines, mostly Merlins.  By the time I was
+shown round the place there was a bewildering conglomeration of parts
+being made for piston, turbo prop and jet engines.
 
-\begin{multicols}{2}
+As a young accountant I was expected to understand how the paperwork
+and accounting for all this worked. It was a daunting thought and I
+left the Foundry feeling overwhelmed.  Throughout my time at R-R I
+never became comfortable dealing with the Foundry -- everything seemed
+to be so imprecise and up to the skill on the foundry man. Each time I
+went there I tried to find out how the men knew how to produce the
+same casting every time and the answer was always the same: "Oh, we
+just know what to do".  Many of these comments were probably made to
+try to make a young guy in a suit from the office look foolish but
+they were also largely true!
 
-Most of my friends were at university and enjoyed long summer holidays
-when they would spend time tinkering with unreliable prewar old cars
-while I toiled away in an office. Weekends were supposed to be spent
-studying for accountancy exams. I always did the minimum amount of
-study and would move into my father's big old garage at the earliest
-opportunity to tinker with my 1934 Daimler limousine. The most common
-tools I had to use were my hands, Whitworth spanners, feeler gauges, a
-good sized hammer and Swarfega for cleaning up before doing a little
-lightweight courting in the evenings.
+Sitting in the Overheads Department I saw many of the invoices for
+purchases. I could hardly believe it when I saw invoices going through
+for payment for dozens of chickens. The delivery was never to the
+works canteen but always to the R-R site at Hucknall, a short distance
+outside Derby. My supervisor told me that the chickens were fired at
+engines on test. I did not believe him until I managed to find a
+pretext to visit Hucknall. After another challenge finding the works
+bus to get me there, I arrived at the site and was shown round and all
+was revealed. Dead chickens ending their time on earth being used to
+test the strength of compressor blades in an engine on full power
+seemed to me to be a very imprecise way of testing a jet
+engine. Another lesson learned -- not everybody was trying to make me
+look foolish all the time.
 
-Eventually the prized certificate arrived in the mail saying that I
-had qualified as a Chartered Accountant. I was now ready to leave the
-accountants' office behind and get a job as an accountant in
-industry. I could hardly believe my luck when I was offered a job as
-an assistant accountant in the Aero Engine Division of Rolls-Royce in
-Derby.
+The visits to the various R-R sites around Derby took several months
+to complete. I had to have a good reason to leave my office and go
+visiting, particularly as I was now working in a departmental
+position. Eventually another bus trip to the large new complex at
+Sinfin was required or I somehow managed to talk my way into finding
+it necessary to go there. Sinfin, among many other things, housed the
+main engine test beds and I was curious to find out what happened
+there. Unlike the evil smelling Foundry, Sinfin was clean, new and had
+plenty of windows.
 
-\end{multicols}
+The men in the test shop told me about the engine testing process. I
+was still new to R-R and had a lot to learn. After a while I was asked
+if I would like to see an engine on test. Of course I said yes; it
+seemed interesting. With little experience I did not realize that an
+aero engine on test is nothing much to see. One of the men said he
+would take me to a Conway engine on test. He said he would open the
+test bed door to let me see the engine and that I would find it
+somewhat noisy. He stood behind the door, opened it and let me look
+inside at the engine on full power. I now wear hearing aids. Health
+and safety were two words not used in those days when many of the men
+were used to serving in the war. This was 1960s Britain.
 
-\begin{figure*}[ht!]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.75]{rolls_royce.eps}
-   %caption of the figure 
-   \caption*{\small \em Nightingale Road office before closure in 2008.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:rollsroyce}
-\end{figure*}
+I have always enjoyed travelling and would jump at any opportunity to
+travel to a new place. After a few months it was suggested to me that
+I should visit the Scottish factory at Hillington near Glasgow. I
+asked how I should get there. ``Oh. You might as well fly. There is a
+flight every day that leaves in the morning and comes back in the
+afternoon.'' I had never flown before.
 
-\begin{multicols}{2}
+The UK being a small country, everybody went around by train.  As
+usual, I was given very little information and told to get myself to
+East Midlands airport early on the appointed morning, where a ticket
+would be waiting for me. On this occasion I had the good sense to take
+my own car to the airport and did not get lost. I expected to find a
+plane waiting, painted in some sort of Rolls-Royce colours. Instead,
+after some questioning, I found out that I would be travelling on a
+small airline, called British Midland, that ran a daily service
+between the Derby and Glasgow factories. Far from being in some
+interesting plane connected with R-R, I found that our plane was an
+old DC3 which had seen better days.I duly got on the plane and was
+somewhat nervous flying on my first flight.
 
-As a young accountant I was very proud of myself to have got a job
-with such a prestigious company and I duly reported to work on my
-first Monday to be told that I would be given an induction period
-under the guidance of an experienced employee. I found I was put with
-two other green accountants to be guided by a man who was an ex WW2
-regular army sergeant. He was about a foot shorter than me with a
-pencil moustache but had a typical sergeant's voice and manner. Les
-Hart knew very little about accounting and almost nothing about
-engineering but he certainly knew the company and the world. One of
-the best bits of advice he gave me was ``Do not let the buggers get you
-down''. I needed this advice on many occasions while at Rolls-Royce.
+An hour later we arrived in Scotland, also my first trip over the
+Border, and I spent the day being shown around the factories and
+offices.  I remember very little about the day but vividly remember
+the flight back to Derby. It must have been in the winter because it
+was getting dark as I boarded the plane around 5.00 pm. Seating was
+first come first served and all the old sweats travelling knew what to
+do. I ended up on the back row near the cargo area. The main thing I
+remember was the crew having a fierce argument about the load on the
+plane which was full. The discussion centred around the amount of
+cargo which could be taken on the flight. I was quite relieved to get
+back to Derby in one piece.
 
-Following a bewildering first week of being shown round some of the
-R-R factories in Derby with my fellow new accountants, Les said we
-were ready to start work. I was told to report to the Overheads
-Department in the main accounting building near the Nightingale Road
-head office. Les introduced me to the supervisor of the department and
-then went on his way to deal with some other task. At that time R-R
-employed about 30,000 people in several factories around the UK and I
-felt very far removed from actual aero engines while sitting in this
-vast sea of clerical people. The building was a converted warehouse
-and my office was in the middle of the huge second floor housing about
-200 people. There was no air conditioning and very little
-ventilation. As the day wore on the atmosphere became putrid to say
-the least of it. My pleasure at being offered a job at Rolls-Royce was
-rapidly evaporating.
 
-Derby in the 1960s was a two industry town, Rolls-Royce and the main
-railway workshops of the Midland Region of British Railways. For many
-people there were few choices other than to work at one of these two
-employers. Many of the employees at R-R had been with the company
-since leaving school at 16. They really did not like young
-inexperienced accountants being foisted upon them but I was new, full
-of enthusiasm and did not realize this.
-
-The old sweats in the Overheads Department soon let me know that I
-might be more technically qualified than them but that was only an
-illusion. After a month or two, I made a bad mistake and my section
-leader came to me and said ``You made a bad drop-off there''. I had no
-idea what a drop-off was. He then called over the supervisor to
-discuss the mistake and said ``Lodge here doesn't know what a drop-off
-is and I guess he doesn't know whether he is punched, bored or
-countersunk either.'' By that time I knew exactly what my mistake was
-but what neither of these men explained was the meaning of their other
-comments. It took me some time to find Les Hart who told me that a
-drop-off referred to a careless person in the factory allowing an
-expensive part to drop onto the floor and break and secondly that
-punched, bored or countersunk described the method of making a certain
-part of my anatomy. I was beginning to realize that to survive at R-R
-I had a lot to learn.
-
-Shortly afterwards I got my own back on these gentlemen when, to their
-horror, I was appointed supervisor of the Overheads department.
-
-In the next article I will describe how I came to enjoy the rest of my
-time at R-R and learnt about life in the real world of traditional
-British engineering.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
