--- a/pnsac/jul13/article_ForthEvents.tex
+++ b/pnsac/jul13/article_ForthEvents.tex
@@ -13,12 +13,12 @@
 changed and will now he held on Saturday, June 8, 2013.
 
 \begin{tabbing}
-May 30, 2013     \hspace{20mm}\= Board of Directors' Meeting\\
- {\normalfont\color{red}June 8, 2013}     \>
- {\normalfont\color{red}Annual General Meeting}\\
-June 8, 2013      \> Board of Directors' Meeting (post AGM)\\
-June 27, 2013     \> Board of Directors' Meeting (first meeting of new Board)\\
-September 12, 2013     \> Board of Directors' Meeting (to be confirmed)\\
+%May 30, 2013     \hspace{20mm}\= Board of Directors' Meeting\\
+% {\normalfont\color{red}June 8, 2013}     \>
+% {\normalfont\color{red}Annual General Meeting}\\
+%June 8, 2013      \> Board of Directors' Meeting (post AGM)\\
+%June 27, 2013     \> Board of Directors' Meeting (first meeting of new Board)\\
+September 12, 2013     \hspace{20mm}\= Board of Directors' Meeting (to be confirmed)\\
 September 21, 2013     \> Members' Quarterly Meeting (to be confirmed)\\
 November 28, 2013      \> Board of Directors' Meeting (to be confirmed)\\
 December 7, 2013       \> Members' Quarterly Meeting (to be confirmed)\\
