--- a/pnsac/jul13/article_PresReport.tex
+++ b/pnsac/jul13/article_PresReport.tex
@@ -9,39 +9,55 @@
 
 \maketitle
 
-As I write these notes in the middle of April, I see a fresh fall of
-snow on the ground.  For the first time in many years, the North Star,
-already out in the open, will be covered in snow.  This unusual
-situation has been caused by the Star Wars exhibition to be located in
-the Storage Hangar this summer.  The larger Argus airplane has also
-been moved outside, in a position which reduces visibility of the
-North Star for the public.  This will present a challenge to us in
-showing off our work to Museum visitors.
+Canada Day is now behind us.  We had an excellent day with a good
+number of our volunteers showing off the North Star to the general
+public. Judging by the activity around the plane all the day, we have
+now developed a display format which is interesting to visitors.
+Canada Day was the only day this year when the plane was on display to
+the general public.
 
-The Star Wars exhibition has also affected our plans for commemorating
-the 10th anniversary of the founding of the Project North Star
-Association.  We are now planning to celebrate the anniversary when we
-open the North Star for the public on Canada Day.  That will be the
-only time this summer when we can invite the general public to see the
-North Star and offer our members conducted tours inside the plane.  We
-will ensure that there are good directions to the North Star and
-volunteers located in the main Museum will assist visitors and members
-in finding it.
+On June 27, in co-operation with the Museum, who hosted the event, we
+showed off the plane to a group of donors attending the Donor
+Appreciation Evening.  This was a successful evening which is likely
+to be repeated.
 
-All this has had only a minor effect on the plane restoration.  We are
-very actively working both inside the restoration shop and inside the
-plane itself.  As usual our Project Manager has provided elsewhere in
-the Chronicle a comprehensive report of our progress.
+In my last Notes from the President, I referred to plans for
+celebrating the 10th anniversary of the founding of the Project North
+Star Association.  This should have taken place around June 24.
+Unfortunately, the event passed without us being able mark the
+day. This was mainly due to situations beyond our control.
 
-In the next Chronicle, we are planning to start a Letters to the
-Editor section.  Many of our members are not located in Ottawa and may
-well have interesting questions or comments on our work, or stories or
-pictures about North Star in general.  We will welcome any letters or
-stories, which should be sent to the Editor
-(\email{editor@projectnorthstar.ca}) by email or by mail to the
-address shown on the last page of this newsletter.  As with any
-publication, our editor will decide whether an item should be
-published.
+Our 2013 AGM was held on June 8, and all the existing directors were
+re-elected.  This will enable the directors, who have now become
+experienced, to concentrate on long-term matters.
+
+The actual work on the restoration of the plane is going very well, as
+reported elsewhere in this newsletter. The major issue facing the
+Board in the next year will be to consider how to secure the future of
+PNSAC, both in terms of volunteers and the funding of restoration
+work.
+
+We have now reached a point where it is necessary to update our
+Memorandum of Understanding (MOU) with the Museum and our work plan
+for completing the restoration of the plane.  Our volunteers have
+already worked over 60,000 hours on the project and we expect to work
+a similar number of hours before the restoration is completed.
+
+There have been several informal meetings to discuss our future
+operations and the opportunities available for new volunteers.  Within
+the next few weeks we are expecting to meet with the Director General
+of the Aviation Museum and members of his staff to work on the MOU
+update.
+
+Later this month we are meeting with senior management of the Museum
+Foundation, the body charged with corporate fundraising for the Canada
+Science and Technology Museums Corporation, to discuss how PNSAC can
+work with the Foundation to raise funds for the North Star restoration
+and the museums in general.
+
+With the initiatives above, we are hoping in the next few months to
+consolidate our position as an important organization working with the
+Aviation Museum
 
 
 \begin{footnotesize}
