--- a/pnsac/jul13/article_RecentEvents.tex
+++ b/pnsac/jul13/article_RecentEvents.tex
@@ -4,124 +4,100 @@
 % Language: Latex
 
 
-\title{Special Events}
-%\subtitle{Visit to the Canada Aviation and Space Museum}
-%\author{Bill Tate}
+\title{Project North Star Trip to  426 Squadron}
+\author{Bill Tate}
 
 \maketitle
 
-\section{Project North Star Visit to RCAF 426 Squadron ``Thunderbirds''
-  -- Friday Jun 14, 2013'}
-\label{sec:trenton}
+Friday June 14th dawned bright and clear for our visit to 426 Squadron
+at 8 Wing Royal Canadian Air Force Station Trenton.
 
-Project North Star is pleased to announce a tour of 426 Squadron at
-RCAF Trenton on Friday, June 14th, 2013.  This visit came up at very
-short notice, through the help of Tim Timmins (retired Colonel CAF and
-member of PNSAC) and Lieutenant Colonel Damon Perrault, Commanding
-Officer of 426 Squadron.
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.5]{trenton2013-herc.eps}
+   %caption of the figure 
+   \caption*{\small \em National Air Force Museum -- Hercules.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:herc}
+\end{figure}
 
-Due to the fantastic demand that was generated for our trip to
-Montreal, I would strongly recommend an early booking to avoid
-disappointment as seats are limited for this fun day of activities.
+Once again scheduling allowed us to have Jean Pierre as our driver
+which meant JP had as much fun as we did. We departed right on time at
+07:00 with Richard Lodge giving everyone on board a welcome and a
+brief explanation of the day's events.
 
-Our visit to 426 Squadron, which does all the training for the new
-C-130J, will involve a tour of their brand new state of the art
-training facilities that includes the two airframes that are used for
-technician training, another airframe for training loadmasters, a
-procedure trainer, and full motion simulators with the usual caveat
-``operational requirements.''
+With the kind assistance of Garry and Jim, all on board were offered
+our normal complimentary coffee and donuts to help kick start the
+early day. Following a brief stop in Mallorytown on the 401 we
+proceeded for what we thought would be an on-time arrival at 426
+Squadron but a freight train had other plans for us. After skillful
+driving by JP we arrived only 20 minutes late at the Sedley
+S. Blanchard Air Mobility Training Center which is the home of 426
+Squadron.
 
-After our visit, we will attend the RCAF Memorial Museum which has
-undergone a major upgrade to its display area along with their work
-shops.
+Our group was warmly greeted by Lieutenant Colonel Perrault the
+Commanding Officer of 426 Squadron who gave us a briefing on what
+responsibilities 426 Squadron has in its training role .
 
-Afterwards we will have a debriefing at Rumour's Restaurant for
-schnitzel before returning to Ottawa.
+After our welcome we were split into groups to start our planned tours
+of this very modern high tech facility. One of the many highlights of
+the tour was the Fuselage Trainer, a full size fuselage from an old
+airframe which is used for training load masters. The Fuselage Trainer
+can be integrated with the Tactical Flight Training Device, a
+simulator that has full motion with a wrap around visual system. In a
+training scenario the Fuselage Trainer can be integrated with the
+simulator to offer real time integrated training for both crews. I was
+impressed with the new capabilities of the wrap around visual system
+which is superior to the older systems that I trained on. While we all
+had a chance to hand fly the simulator I was impressed with how
+advanced the simulator visual display is, in which you can pick out
+the difference of a deciduous tree to a coniferous tree. Another
+upgrade is the Heads Up Display or the HUD in which you look through a
+screen in front of the cockpit window which has all the flight
+instruments projected onto a small screen. The will allow a pilot the
+enhanced situational awareness of looking outside the aircraft and
+still have the flight instruments for guidance.
 
-The cost per person is \$70:00. Please send two cheques including a
-non-refundable deposit of \$30:00 and a post- dated cheque in the
-amount of \$40:00 dated May 14, 2013.
- 
-Please note ``Trenton Trip'' on your cheques in addition to sending me
-(Bill Tatae) an e-mail message (\email{pnsac.specialevents@gmail.com})
-to confirm your participation.  Please include your full name and date
-of birth in your e-mail message (this is a requirement of RCAF
-Security) as well as your preferred contact information, email or
-telephone.
+Another training aid was the Integrated Procedures Trainer which
+allows maintenance and flight crews to work through issues with system
+failures. The other part of this was another full scale fuselage with
+partial wing where maintenance can be done on a full scale engine with
+propeller as well as part of the wing and fuselage.
 
-Active volunteers can bring your cheques to the PNSAC office at the
-CASM or alternatively mail to:
+The other training module was the Night Vision Integrated Simulator
+where observers train in tandem with pilots on detection of missiles ,
+anti aircraft artillery aka "Triple A" using the latest in restricted
+military use only night vision goggles which cost the price of a mid
+sized car.
 
-\address{PNSAC\\
-P.O.Box 44005\\
-514 Montreal Road\\
-Ottawa, ON\\
-K1K 4P8}
+The tour was highly organized and we were all impressed with high
+degree of enthusiastic professionalism displayed by all members of 426
+Squadron.
 
-\section{Third Annual Golf Day at Loch March -- Wednesday August 14, 2013}
-\label{sec:golf}
+After the visit to 426 Squadron we went to the Yukon Galley for a
+light lunch before proceeding to the National Air Force Museum for a
+tour of the restoration shops, their displays indoors and outdoors.
 
-Our Second planned Special Event is for Wednesday August 14th which is
-Third Annual Golf Day at Loch March in Carp Ontario.
+The day concluded with dinner at Tomasso's Italian Grill before we
+drove back to Ottawa to end the day.
 
-The day will start off with breakfast at 09:00 with golf starting
-shortly after 10:00.
+\end{multicols}
 
-The club professional, as last year, has graciously given PNSAC two
-free passes for 18 holes at Loch March, which will be awarded for the
-longest drive (staying in bounds of course) and closest to the
-pin. Format will be best ball.
+\begin{figure*}[ht!]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.75]{trenton2013_group.eps}
+   %caption of the figure 
+   \caption*{\small \em After Tomasso's -- ready for the drive home.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:rollsroyce}
+\end{figure*}
 
-Afterwards on the deck, we will discuss the day's game and the
-Vice-President will give the winner a ``free beer'' for their effort. 
+\begin{multicols}{2}
 
-Please email \email{pnsac.specialevents@gmail.com} to confirm you are coming
-and call the starter at Loch March 613-839-5885.
-
-Please visit the web site
-{\normalfont\color{blue}\texttt{\url{www.lochmarch.com}}} for more
-information such as facilities and dress code.
-
-\section{Montreal Area Control Centre and the Bombardier Aerospace  --
-Friday Otober 4, 2013}
-\label{sec:montreal}
-
-Our Third planned Special Event, on Friday October 4th, is a trip to
-the Montreal Area Control Centre and the Bombardier Aerospace factory
-in Dorval.
-
-The Montreal Area Control Centre is a secure facility responsible for
-Radar Air Traffic Control in the Quebec region including northern
-Labrador up to Baffin Island. This tour will have us divided into
-smaller groups due to the requirement for quiet so as not to disturb
-the Air Traffic Controllers. For operational considerations this tour
-could be cancelled on short notice if there is a declared emergency or
-an emergency in progress.
-
-After a lunch break we will travel to the Bombardier factory in Dorval
-where the CRJ series jet aircraft are built.
-
-For dinner we will proceed to the Willow Inn in Hudson before
-proceeding back to Ottawa.
-
-As this tour is now sold out we can accept bookings on a cancellation
-basis only.
-
-To make a cancellation booking please email
-\email{pnsac.specialevents@gmail.com} to confirm you are willing to standby
-for this trip, and mail a non-refundable cheque payable to PNSAC for
-\$60:00 payable to PNSAC and in the cheque memo please put in Montreal
-trip. Please note this cheque will only be cashed if space becomes
-available and if no space becomes available the cheque will be
-destroyed.
-
-Please mail the completed booking sheet and cheques to:
-
-\address{PNSAC\\
-P.O.Box 44005\\
-514 Montreal Road\\
-Ottawa, ON\\
-K1K 4P8}
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
