--- a/pnsac/jul13/main_document.tex
+++ b/pnsac/jul13/main_document.tex
@@ -1,3 +1,4 @@
+
 % Main document PNSAC newsletter
 % Language: Latex
 %
@@ -41,16 +42,16 @@
 \begin{document}
 
 \volume{9} % \volnumber{1}
-\issue{2}
-\date{April 2013} 
+\issue{3}
+\date{July 2013} 
 \titlepage
 
 % Progress report ................................................... %
 
 % Report
-\begin{article}
-	\input{article_ProgReport} 
-\end{article}
+%\begin{article}
+%	\input{article_ProgReport} 
+%\end{article}
 
 % Report
 % \begin{article}
@@ -70,9 +71,9 @@
 %\pagebreak
 
 % Feature article
-\begin{article}                 
-	\input{article_Feature2} 
-\end{article}
+%\begin{article}                 
+%	\input{article_Feature2} 
+%\end{article}
 
 %\pagebreak
 
@@ -111,7 +112,7 @@
 
 % Special article 
 \begin{article}
-	\input{article_Special} 
+	\input{article_SpecialEvents} 
 \end{article}
 
 \pagebreak
